Fixed mobile nav social icon alignment

--- a/htdocs/css/mobile.css
+++ b/htdocs/css/mobile.css
@@ -79,7 +79,9 @@ a {
   padding-right: 5%;
 }
 #Logo_Min img {
-  margin-top: 100px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
   max-width: 10rem;
 }
 #Nametag {
@@ -96,14 +98,8 @@ a {
 }
 #Nav_Social {
   filter: invert(1);
-  margin-right: 0.5rem;
-  display: flex;
-  align-items: center;
-  position: relative;
-  top: 0;
-  right: 0;
+  margin-top: 15px;
 }
 #Nav_Social a {
-  margin: 0;
-  padding: 0.35rem;
+  padding: 0.1px;
 }
